--- a/app/src/main/res/layout/fragment_alco_drinks.xml
+++ b/app/src/main/res/layout/fragment_alco_drinks.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".AlcoDrinksFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -19,205 +20,13 @@
         android:textSize="36sp"
         android:textStyle="bold" />
 
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="366dp"
+        android:layout_height="454dp"
+        android:layout_marginTop="40dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="180dp"
-        android:layout_marginTop="50dp"
-        android:orientation="horizontal">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:weightSum="5">
-
-            <TextView
-                android:id="@+id/wineTxtView"
-                android:layout_width="match_parent"
-                android:layout_height="28dp"
-                android:layout_weight="1.7"
-                android:fontFamily="@font/architects_daughter"
-                android:text="Wines"
-                android:textColor="@android:color/holo_red_light"
-                android:textSize="36sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/wine1TxtView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.2"
-                android:fontFamily="@font/ranchers"
-                android:text="Gewürztraminer                       38 ILS"
-                android:textColor="@android:color/background_dark"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/wine2TxtView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.2"
-                android:fontFamily="@font/ranchers"
-                android:text="Pinot Grigio                                      44 ILS"
-                android:textColor="@android:color/background_dark"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/wine3TxtView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.2"
-                android:fontFamily="@font/ranchers"
-                android:text="Cabernet Sauvignon            40 ILS"
-                android:textColor="@android:color/background_dark"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/wine4TxtView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.2"
-                android:fontFamily="@font/ranchers"
-                android:text="Merlot                                                     42 ILS"
-                android:textColor="@android:color/background_dark"
-                android:textStyle="bold" />
-        </LinearLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:layout_marginTop="200dp"
-        android:orientation="horizontal">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="180dp"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:weightSum="5">
-
-            <TextView
-                android:id="@+id/beerTxtView"
-                android:layout_width="match_parent"
-                android:layout_height="28dp"
-                android:layout_weight="1.9"
-                android:fontFamily="@font/architects_daughter"
-                android:text="Beers"
-                android:textColor="@android:color/holo_red_light"
-                android:textSize="36sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/beer2TxtView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.2"
-                android:fontFamily="@font/ranchers"
-                android:text="weihenstephan                35 ILS"
-                android:textColor="@android:color/background_dark"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/beer3TxtView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.2"
-                android:fontFamily="@font/ranchers"
-                android:text="Stella                                             30 ILS"
-                android:textColor="@android:color/background_dark"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/beer4TxtView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.2"
-                android:fontFamily="@font/ranchers"
-                android:text="Hoegaarden                         30 ILS"
-                android:textColor="@android:color/background_dark"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/beer5TxtView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.2"
-                android:fontFamily="@font/ranchers"
-                android:text="Paulaner                                   35 ILS"
-                android:textColor="@android:color/background_dark"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/beer6TxtView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.2"
-                android:fontFamily="@font/ranchers"
-                android:text="Guinness                                    35 ILS"
-                android:textColor="@android:color/background_dark"
-                android:textStyle="bold" />
-        </LinearLayout>
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:layout_marginTop="365dp"
-        android:orientation="horizontal">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="180dp"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:weightSum="4">
-
-            <TextView
-                android:id="@+id/cocktailTxtView"
-                android:layout_width="match_parent"
-                android:layout_height="28dp"
-                android:layout_weight="0.9"
-                android:fontFamily="@font/architects_daughter"
-                android:text="Cocktails"
-                android:textColor="@android:color/holo_red_light"
-                android:textSize="36sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/MohitoTxtView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.2"
-                android:fontFamily="@font/ranchers"
-                android:text="Mohito                                     40 ILS"
-                android:textColor="@android:color/background_dark"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/CosmoTxtView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.2"
-                android:fontFamily="@font/ranchers"
-                android:text="Cosmopolitan                 40 ILS"
-                android:textColor="@android:color/background_dark"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/martiniTxtView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.2"
-                android:fontFamily="@font/ranchers"
-                android:text="Martini                                    40 ILS"
-                android:textColor="@android:color/background_dark"
-                android:textStyle="bold" />
-
-
-        </LinearLayout>
-    </LinearLayout>
 </FrameLayout>
