--- a/app/src/main/res/layout/fragment_food_menu.xml
+++ b/app/src/main/res/layout/fragment_food_menu.xml
@@ -21,7 +21,7 @@
 
     <ListView
         android:id="@+id/listView"
-        android:layout_width="366dp"
+        android:layout_width="match_parent"
         android:layout_height="454dp"
         android:layout_marginTop="40dp"
         app:layout_constraintEnd_toEndOf="parent"
