--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -11,7 +11,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:textSize="20sp"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:fontFamily="@font/comfortaa_light"/>
 
     <TextView
         android:id="@+id/list_item_price"
@@ -20,6 +21,7 @@
         android:layout_toRightOf="@id/list_item_name"
         android:layout_margin="20dp"
         android:textSize="20sp"
+        android:fontFamily="@font/comfortaa_light"
         app:layout_constraintRight_toRightOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
