--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -68,7 +68,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:layout_marginStart="8dp"
-        android:fontFamily="@font/monoton"
+        android:fontFamily="sans-serif"
         android:text=""
         android:textColor="@color/com_facebook_blue"
         android:textSize="18sp"
