--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -131,9 +131,10 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:layout_marginStart="8dp"
-        android:fontFamily="@font/monoton"
+        android:fontFamily="sans-serif"
         android:text=""
-        android:textColor="@android:color/holo_red_dark"
+        android:textColor="@color/com_facebook_blue"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/profile_image" />
