--- a/app/src/main/res/layout/fragment_user_order.xml
+++ b/app/src/main/res/layout/fragment_user_order.xml
@@ -11,16 +11,16 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        
+
         <TextView
             android:id="@+id/UserNameTxtView"
-            android:layout_width="4dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
             android:layout_marginEnd="8dp"
             android:fontFamily="@font/monoton"
             android:text=""
-            android:textColor="@android:color/holo_red_dark"
+            android:textColor="@color/com_facebook_blue"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
