--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/wind_dine"
+    android:background="@drawable/shame_bar"
     android:backgroundTint="#80FFFFFF"
     android:backgroundTintMode="src_over">
 
