--- a/app/src/main/res/layout/fragment_full_menu.xml
+++ b/app/src/main/res/layout/fragment_full_menu.xml
@@ -9,23 +9,43 @@
     android:backgroundTint="#80FFFFFF"
     android:backgroundTintMode="src_over"
    >
+<android.support.constraint.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <ListView
         android:id="@+id/Table_Menu_ListView"
-        android:layout_width="match_parent"
-        android:layout_height="452dp"
-        android:layout_marginTop="40dp"
+        android:layout_width="386dp"
+        android:layout_height="428dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="1.0" />40dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="34dp"
-        android:layout_marginLeft="150dp"
-        android:layout_marginRight="150dp"
-        android:text="TextView" />
+        android:layout_width="121dp"
+        android:layout_height="49dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/holtwood_one_sc"
+        android:text="MENU"
+        android:textColor="@android:color/background_light"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-
+</android.support.constraint.ConstraintLayout>
 </FrameLayout>
