--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -4,6 +4,7 @@
         <item>@font/architects_daughter</item>
         <item>@font/bungee_shade</item>
         <item>@font/comfortaa_light</item>
+        <item>@font/holtwood_one_sc</item>
         <item>@font/luckiest_guy</item>
         <item>@font/monoton</item>
         <item>@font/ranchers</item>
