--- a/app/src/main/res/layout/table_list_bar_item.xml
+++ b/app/src/main/res/layout/table_list_bar_item.xml
@@ -7,33 +7,32 @@
 
     <TextView
         android:id="@+id/list_item_name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:textSize="20sp"
+        android:layout_marginStart="2dp"
+        android:fontFamily="@font/comfortaa_light"
+        android:textSize="14sp"
         android:textStyle="bold"
-        android:fontFamily="@font/comfortaa_light"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/list_item_price"
-        android:layout_width="52dp"
+        android:layout_width="0dp"
         android:layout_height="40dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_toRightOf="@id/list_item_name"
+        android:layout_marginEnd="4dp"
+        android:layout_toEndOf="@id/list_item_name"
         android:fontFamily="@font/comfortaa_light"
-        android:textSize="20sp"
+        android:textSize="17sp"
         app:layout_constraintEnd_toStartOf="@+id/addItemBtn"
-        app:layout_constraintHorizontal_bias="0.65"
-        app:layout_constraintStart_toEndOf="@+id/list_item_name"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/addItemBtn"
         android:layout_width="44dp"
         android:layout_height="42dp"
-        android:layout_marginEnd="4dp"
-        android:layout_toRightOf="@id/list_item_price"
+        android:layout_marginEnd="34dp"
+        android:layout_toEndOf="@id/list_item_price"
         android:background="@android:drawable/ic_input_add"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
