Added import information from database to UserOrderFragment + Fixed ListItemAdapter (added USER_SOURCE case)

--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -8,5 +8,6 @@
         <item>@font/luckiest_guy</item>
         <item>@font/monoton</item>
         <item>@font/ranchers</item>
+        <item>@font/sonsie_one</item>
     </array>
 </resources>
