--- a/app/src/main/res/layout/user_list_bar_item.xml
+++ b/app/src/main/res/layout/user_list_bar_item.xml
@@ -7,48 +7,50 @@
 
     <TextView
         android:id="@+id/list_item_name"
-        android:layout_width="46dp"
-        android:layout_height="39dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:layout_marginStart="2dp"
         android:fontFamily="@font/comfortaa_light"
         android:textSize="14sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/list_item_price"
-        app:layout_constraintHorizontal_bias="0.444"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/list_item_price"
-        android:layout_width="29dp"
+        android:layout_width="0dp"
         android:layout_height="40dp"
-        android:layout_marginEnd="236dp"
+        android:layout_marginEnd="4dp"
         android:layout_toEndOf="@id/list_item_name"
         android:fontFamily="@font/comfortaa_light"
-        android:textSize="17sp"
+        android:textSize="14sp"
         app:layout_constraintEnd_toStartOf="@+id/list_item_amount"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/list_item_amount"
-        android:layout_width="0dp"
-        android:layout_height="40dp"
-        android:layout_marginEnd="16dp"
-        android:layout_toEndOf="@id/list_item_name"
-        android:fontFamily="@font/comfortaa_light"
-        android:textSize="17sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/cancelItemBtn"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <Button
-        android:id="@+id/cancelItemBtn"
+        android:id="@+id/deleteItemBtn"
         android:layout_width="44dp"
         android:layout_height="42dp"
+        android:layout_marginEnd="34dp"
         android:layout_toEndOf="@id/list_item_price"
         android:background="@android:drawable/ic_delete"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/list_item_amount"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_marginEnd="16dp"
+        android:layout_toEndOf="@id/list_item_name"
+        android:fontFamily="@font/comfortaa_light"
+        android:textColorLink="@android:color/holo_green_dark"
+        android:textSize="17sp"
+        android:textStyle="bold"
+
+        app:layout_constraintEnd_toStartOf="@+id/deleteItemBtn"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
 
 </android.support.constraint.ConstraintLayout>
