Fixed General Design

--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/wind_dine"
+    android:background="@color/com_facebook_button_login_silver_background_color_pressed"
     android:backgroundTint="#80FFFFFF"
     android:backgroundTintMode="src_over">
     tools:context=".MapActivity">
@@ -16,12 +16,12 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:fontFamily="@font/comfortaa_light"
+        android:fontFamily="@font/oleo_script"
         android:text="Search For Bars Near You"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@android:color/background_dark"
-        android:textSize="24sp"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,10 +35,10 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:src="@drawable/globus"
         android:fontFamily="@font/architects_daughter"
         android:hint="Enter a bar name"
         android:inputType="textPersonName"
+        android:src="@drawable/globus"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
