--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -7,6 +7,7 @@
         <item>@font/holtwood_one_sc</item>
         <item>@font/luckiest_guy</item>
         <item>@font/monoton</item>
+        <item>@font/oleo_script</item>
         <item>@font/ranchers</item>
         <item>@font/sonsie_one</item>
     </array>
