--- a/app/src/main/res/layout/all_orders_list_bar_item.xml
+++ b/app/src/main/res/layout/all_orders_list_bar_item.xml
@@ -8,8 +8,8 @@
 
     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/profile_image"
-        android:layout_width="69dp"
-        android:layout_height="70dp"
+        android:layout_width="50sp"
+        android:layout_height="50sp"
         android:layout_marginStart="4dp"
         android:layout_marginTop="4dp"
         app:civ_border_color="#FF000000"
@@ -38,12 +38,12 @@
         android:layout_margin="20dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="26dp"
         android:layout_toRightOf="@id/list_item_name"
         android:fontFamily="@font/comfortaa_light"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.684"
+        app:layout_constraintHorizontal_bias="0.663"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toEndOf="@+id/list_item_name"
         app:layout_constraintTop_toTopOf="parent" />
@@ -51,16 +51,15 @@
     <TextView
         android:id="@+id/list_item_amount"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_height="46dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="20dp"
         android:layout_toRightOf="@id/list_item_price"
         android:fontFamily="@font/comfortaa_light"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.684"
+        app:layout_constraintHorizontal_bias="0.787"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toEndOf="@+id/list_item_price"
         app:layout_constraintTop_toTopOf="parent" />
