--- a/app/src/main/res/layout/fragment_full_menu.xml
+++ b/app/src/main/res/layout/fragment_full_menu.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/full_menu_bg"
+    android:background="@drawable/bar_bg"
     android:backgroundTint="#80FFFFFF"
     android:backgroundTintMode="src_over"
     tools:context=".FullMenuFragment">
