--- a/app/src/main/res/layout/fragment_table_order.xml
+++ b/app/src/main/res/layout/fragment_table_order.xml
@@ -14,10 +14,38 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <Button
+            android:id="@+id/bill_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="8dp"
+            android:text="BILL"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/table_total_price_txt"
+            app:layout_constraintVertical_bias="0.027" />
+
+        <Button
+            android:id="@+id/waitress_call_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp"
+            android:text="CALL WAITRESS"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/orderBtn"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/table_total_price_txt"
+            app:layout_constraintVertical_bias="0.027" />
+
         <ListView
             android:id="@+id/Table_Oreders_ListView"
             android:layout_width="match_parent"
-            android:layout_height="327dp"
+            android:layout_height="377dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="4dp"
             android:layout_marginTop="8dp"
@@ -32,13 +60,13 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:text="ORDER"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/Table_Oreders_ListView" />
+            app:layout_constraintEnd_toStartOf="@+id/bill_button"
+            app:layout_constraintStart_toEndOf="@+id/waitress_call_button"
+            app:layout_constraintTop_toBottomOf="@+id/table_total_price_txt"
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:id="@+id/topicTxtView"
@@ -60,6 +88,18 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/table_total_price_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="10dp"
+            android:text="Total price = 0 ILS"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/Table_Oreders_ListView" />
 
     </android.support.constraint.ConstraintLayout>
 
