--- a/app/src/main/res/layout/fragment_user_order.xml
+++ b/app/src/main/res/layout/fragment_user_order.xml
@@ -59,17 +59,27 @@
 
         <ListView
             android:id="@+id/User_Orders_ListView"
-            android:layout_width="386dp"
-            android:layout_height="291dp"
-            android:layout_marginBottom="8dp"
+            android:layout_width="360dp"
+            android:layout_height="318dp"
             android:layout_marginEnd="8dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.1"
+            app:layout_constraintHorizontal_bias="0.75"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/profile_image"
-            app:layout_constraintVertical_bias="0.149" />
+            app:layout_constraintTop_toBottomOf="@+id/profile_image" />
+
+        <TextView
+            android:id="@+id/table_total_price_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="10dp"
+            android:text="Total price = 0 ILS"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/User_Orders_ListView" />
+
     </android.support.constraint.ConstraintLayout>
 
 </FrameLayout>
