Fixed Menu Activity - display background according to the bar name

--- a/app/src/main/res/layout/fragment_chat__bar_.xml
+++ b/app/src/main/res/layout/fragment_chat__bar_.xml
@@ -19,7 +19,7 @@
             android:layout_height="381dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="4dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="24dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="80dp"
             android:fontFamily="@font/sonsie_one"
             android:shadowColor="@android:color/white"
             android:shadowDx="5"
@@ -43,6 +43,7 @@
             android:textSize="35sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.481"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
     </android.support.constraint.ConstraintLayout>
