--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/food1"
+    android:background="@drawable/shame_bar"
     android:backgroundTint="#80FFFFFF"
-    android:backgroundTintMode="src_over">
+    android:backgroundTintMode="src_over"
+    android:id="@+id/menuActivityLayout">
 
     <TextView
         android:id="@+id/barNameTxtView"
